FLOW-929 f-tcell gap and alignment fixed

--- a/packages/flow-table/src/components/f-tcell/f-tcell.scss
+++ b/packages/flow-table/src/components/f-tcell/f-tcell.scss
@@ -51,8 +51,16 @@ f-tcell {
 		display: flex;
 		justify-content: flex-start;
 		align-items: flex-start;
-		gap: 12px;
 		flex-wrap: wrap;
 		width: 100%;
+		f-checkbox {
+			margin-right: 12px;
+		}
+		f-radio {
+			margin-right: 12px;
+		}
+		.row-toggler.left {
+			margin-right: 12px;
+		}
 	}
 }
